GalleryWindow should stay the same size even if a screen has only 1 or 2 tiles

--- a/Views/GalleryWindow.xaml
+++ b/Views/GalleryWindow.xaml
@@ -32,7 +32,7 @@
 						</Button>
 					</WrapPanel>-->
 
-					<ItemsControl x:Name="items" Padding="5" ItemsSource="{Binding tileObserver}">
+					<ItemsControl x:Name="items" Padding="5" MinHeight="700" ItemsSource="{Binding tileObserver}">
 						<ItemsControl.ItemsPanel>
 							<ItemsPanelTemplate>
 								<WrapPanel IsItemsHost="True" />
