Add Shadowed Path tiles; simplify placement & rotation; add MouseWheel rotation
Add Shadowed Path tiles - resized, dpi fixed, saturation, brightness, contrast adjusted
Add hex tile 214B which was missing
Fix sizes, hex points for tiles
Add code to sort the hex points top to bottom, left to right, to help pick correct top-leftmost rotation center point
Add code bounding rectangle for debugging size
Add code for pivot point for debugging rotation center
Mirror utility method for figuring out mirror of hex points
Add MouseWheel handling to rotate tiles in addition to PgUp/PgDn

--- a/Views/TileEditorWindow.xaml
+++ b/Views/TileEditorWindow.xaml
@@ -54,7 +54,7 @@
 				<ColumnDefinition Width="auto"/>
 			</Grid.ColumnDefinitions>
 
-			<Canvas x:Name="canvas" MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="512" Height="512" HorizontalAlignment="Left" VerticalAlignment="Top" MouseLeftButtonDown="canvas_MouseLeftButtonDown">
+			<Canvas x:Name="canvas" MouseUp="Canvas_MouseUp" MouseMove="Canvas_MouseMove" Width="512" Height="512" HorizontalAlignment="Left" VerticalAlignment="Top" MouseLeftButtonDown="canvas_MouseLeftButtonDown" MouseWheel="canvas_MouseWheel">
 				<!--<Image Source="/JiME;component/Assets/TilesA/101.png" />-->
 				<!--<Path Style="{StaticResource hex}"/>
 				<Path Style="{StaticResource hex}">
