File format 1.10; game expansion Collections, monster names; more Bonus names

--- a/Views/Interactions/ThreatInteractionWindow.xaml
+++ b/Views/Interactions/ThreatInteractionWindow.xaml
@@ -82,7 +82,9 @@
 								<RadioButton x:Name="personRadio" Content="Person" Margin="0,0,20,0" Click="tokenTypeClick"/>
 								<RadioButton x:Name="searchRadio" Content="Search" Margin="0,0,20,0" Click="tokenTypeClick"/>
 								<RadioButton x:Name="threatRadio" Content="Threat" Margin="0,0,20,0" Click="tokenTypeClick"/>
-								<RadioButton x:Name="darkRadio" Content="Darkness" Click="tokenTypeClick"/>
+								<RadioButton x:Name="darkRadio" Content="Darkness" Margin="0,0,20,0" Click="tokenTypeClick"/>
+								<RadioButton x:Name="terrainRadio" Content="Difficult Terrain" Margin="0,0,20,0" Click="tokenTypeClick" Visibility="Visible"/>
+								<RadioButton x:Name="fortifiedRadio" Content="Fortified" Click="tokenTypeClick" Visibility="Visible"/>
 							</StackPanel>
 							<StackPanel Orientation="Horizontal" Name="personType" Visibility="Collapsed">
 								<TextBlock Text="Person Type:" Style="{StaticResource Heading}" Margin="0,0,10,0"/>
@@ -327,17 +329,74 @@
 
 							<TextBlock Style="{StaticResource Heading}" Text="Include These Enemies (Point Value in Parentheses):" Margin="0,10,0,5"/>
 
-							<StackPanel Orientation="Horizontal">
-								<CheckBox x:Name="rufCB" Content="Ruffian (3)" Foreground="White"/>
-								<CheckBox x:Name="gobCB" Content="Goblin Scout (3)" Foreground="White" Margin="15,0"/>
-								<CheckBox x:Name="huntCB" Content="Orc Hunter (6)" Foreground="White"/>
-								<CheckBox x:Name="marCB" Content="Orc Marauder (6)" Foreground="White" Margin="15,0"/>
-								<CheckBox x:Name="wargCB" Content="Warg (7)" Foreground="White"/>
-								<CheckBox x:Name="wightCB" Content="Wight (7)" Foreground="White" Margin="15,0"/>
-								<CheckBox x:Name="hTrollCB" Content="Hill Troll (9)" Foreground="White"/>
-							</StackPanel>
+							<Grid Margin="0,5,0,10">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="auto"/>
+									<ColumnDefinition Width="auto"/>
+									<ColumnDefinition Width="auto"/>
+									<ColumnDefinition Width="auto"/>
+									<ColumnDefinition Width="*"/>
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="*"/>
+								</Grid.RowDefinitions>
 
-							<TextBlock Text="The Companion App will randomly spend the Base Pool Points to create Enemy Groups using the Enemies you check above."  Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0"/>
+								<!--Core Set-->
+								<Rectangle Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkGreen" />
+								<CheckBox Click="collection_Click" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" x:Name="coreSetCB" Content="Core Set:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="0" Grid.Column="1" x:Name="goblinScoutCB" Content="Goblin Scout x6 (4)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="0" Grid.Column="2" x:Name="hillTrollCB" Content="Hill Troll x1 (25)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="0" Grid.Column="3" x:Name="orcHunterCB" Content="Orc Hunter x3 (10)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="0" Grid.Column="4" x:Name="orcMarauderCB" Content="Orc Marauder x3 (9)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="1" Grid.Column="1" x:Name="ruffianCB" Content="Ruffian x6 (7)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="1" Grid.Column="2" x:Name="hungryWargCB" Content="Hungry Warg x3 (14)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="1" Grid.Column="3" x:Name="wightCB" Content="Wight x3 (17)" Foreground="White" Padding="0,0,5,0"/>
+
+								<!-- Villains of Eriador -->
+								<Rectangle Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="SaddleBrown" />
+								<CheckBox Click="collection_Click" Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" x:Name="villainsOfEriadorCB" Content="Villains of Eriador:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="2" Grid.Column="1" x:Name="atarinCB" Content="Atarin x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="2" Grid.Column="2" x:Name="coalfangCB" Content="Coalfang x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="2" Grid.Column="3" x:Name="gulgotarCB" Content="Gulgotar x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+
+								<!-- Shadowed Paths -->
+								<Rectangle Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Black" />
+								<CheckBox Click="collection_Click" Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" x:Name="shadowedPathsCB" Content="Shadowed Paths:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="3" Grid.Column="1" x:Name="balrogCB" Content="Balrog x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="3" Grid.Column="2" x:Name="caveTrollCB" Content="Cave Troll x2 (20)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="3" Grid.Column="3" x:Name="giantSpiderCB" Content="Giant Spider x6 (5)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="3" Grid.Column="4" x:Name="namelessThingCB" Content="Nameless Thing x3 (27)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="4" Grid.Column="1" x:Name="orcTaskmasterCB" Content="Orc Taskmaster x6 (14)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="4" Grid.Column="2" x:Name="pitGoblinCB" Content="Pit Goblin x6 (4)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="4" Grid.Column="3" x:Name="shadowmanCB" Content="Shadowman x3 (17)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="2" x:Name="spawnOfUngoliantCB" Content="Spawn of Ungoliant x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+
+								<!-- Dwellers in Darkness -->
+								<Rectangle Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Purple" />
+								<CheckBox Click="collection_Click" Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="5" Grid.Column="1" x:Name="ollieCB" Content="Ollie x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="5" Grid.Column="2" x:Name="ursaCB" Content="Ursa x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="2" x:Name="supplicantOfMorgothCB" Content="Supplicant of Morgoth x1 (X)" Foreground="White" Padding="0,0,5,0"/>
+
+								<!-- Spreading War -->
+								<Rectangle Grid.Row="6" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkRed" />
+								<CheckBox Click="collection_Click" Grid.Row="6" Grid.RowSpan="2" Grid.Column="0" x:Name="spreadingWarCB" Content="Spreading War:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="6" Grid.Column="1" x:Name="fellBeastCB" Content="Fell Beast x3 (24)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="6" Grid.Column="2" x:Name="siegeEngineCB" Content="Siege Engine x2 (22)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="6" Grid.Column="3" x:Name="soldierCB" Content="Soldier x6 (8)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="6" Grid.Column="4" x:Name="urukWarriorCB" Content="Uruk Warrior x6 (11)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="7" Grid.Column="1" x:Name="warOliphauntCB" Content="War Oliphaunt x1 (30)" Foreground="White" Padding="0,0,5,0"/>
+								<CheckBox Grid.Row="7" Grid.Column="2" x:Name="wargRiderCB" Content="Warg Rider x3 (14)" Foreground="White" Padding="0,0,5,0"/>
+							</Grid>
+
+								<TextBlock Text="The Companion App will randomly spend the Base Pool Points to create Enemy Groups using the Enemies you check above."  Style="{StaticResource SubText}" TextWrapping="Wrap" Margin="0,5,0,0"/>
 
 							<Button x:Name="simulateBtn" Click="simulateBtn_Click" Content="Simulate..." HorizontalAlignment="Left" Margin="0,10,0,0" Background="DodgerBlue" Foreground="White"/>
 						</StackPanel>
