--- a/Views/ScenarioWindow.xaml
+++ b/Views/ScenarioWindow.xaml
@@ -54,8 +54,39 @@
 			</Border>
 		</Grid>
 
-		<!--rewards-->
+		<!--collections-->
 		<Border  Grid.Row="1" Style="{StaticResource callout}" Margin="5">
+			<StackPanel>
+				<TextBlock Text="Enable these Collections:" Style="{StaticResource Heading}"/>
+				<Grid Margin="0,5,0,10">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="*"/>
+					</Grid.RowDefinitions>
+
+					<!--Core Set-->
+					<Rectangle Grid.Row="0" Grid.Column="0" Fill="DarkGreen" />
+					<CheckBox Click="collection_Click" Grid.Row="0" Grid.Column="0" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+					<Rectangle Grid.Row="0" Grid.Column="1" Fill="SaddleBrown" />
+					<CheckBox Click="collection_Click" Grid.Row="0" Grid.Column="1" x:Name="villainsOfEriadorCB" Content="Villains of Eriador" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+					<Rectangle Grid.Row="0" Grid.Column="2" Fill="Black" />
+					<CheckBox Click="collection_Click" Grid.Row="0" Grid.Column="2" x:Name="shadowedPathsCB" Content="Shadowed Paths" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+					<Rectangle Grid.Row="0" Grid.Column="3" Fill="Purple" />
+					<CheckBox Click="collection_Click" Grid.Row="0" Grid.Column="3" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+					<Rectangle Grid.Row="0" Grid.Column="4" Fill="DarkRed" />
+					<CheckBox Click="collection_Click" Grid.Row="0" Grid.Column="4" x:Name="spreadingWarCB" Content="Spreading War" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+				</Grid>
+			</StackPanel>
+		</Border>
+		
+		<!--rewards-->
+		<Border  Grid.Row="2" Style="{StaticResource callout}" Margin="5">
 			<StackPanel>
 				<Grid>
 					<Grid.ColumnDefinitions>
@@ -90,7 +121,7 @@
 			</StackPanel>
 		</Border>
 		<!--rewards-->
-		<Border  Grid.Row="2" Style="{StaticResource callout}" Margin="5">
+		<Border  Grid.Row="3" Style="{StaticResource callout}" Margin="5">
 			<Grid>
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="auto"/>
@@ -115,7 +146,7 @@
 		</Border>
 
 		<!--Threat-->
-		<GroupBox Grid.Row="3" Grid.ColumnSpan="2" Header="Threat Settings" Foreground="Silver" Margin="5,0" FontSize="14" Padding="5">
+		<GroupBox Grid.Row="4" Grid.ColumnSpan="2" Header="Threat Settings" Foreground="Silver" Margin="5,0" FontSize="14" Padding="5">
 			<Grid>
 				<Grid.RowDefinitions>
 					<RowDefinition Height="auto"/>
