--- a/Views/Interactions/ThreatInteractionWindow.xaml
+++ b/Views/Interactions/ThreatInteractionWindow.xaml
@@ -351,7 +351,7 @@
 								<!--Core Set-->
 								<Rectangle Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkGreen" />
 								<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-									<Image Source="/JiME;component/Assets/Collection-White-Ring.png" Height="15" Stretch="Uniform" Margin="2,0" />
+									<TextBlock Text="r" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 									<CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 								</StackPanel>
 								<CheckBox Grid.Row="0" Grid.Column="1" x:Name="goblinScoutCB" Content="Goblin Scout x6 (4)" Foreground="White" Padding="0,0,5,0"/>
@@ -365,7 +365,7 @@
 								<!-- Villains of Eriador -->
 								<Rectangle Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="SaddleBrown" />
 								<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
-									<Image Source="/JiME;component/Assets/Collection-White-Wolf.png" Height="15" Stretch="Uniform" Margin="2,0" />
+									<TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 									<CheckBox Click="collection_Click" x:Name="villainsOfEriadorCB" Content="Villains of Eriador:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 								</StackPanel>
 								<CheckBox Grid.Row="2" Grid.Column="1" x:Name="atarinCB" Content="Atarin x1 (X)" Foreground="White" Padding="0,0,5,0"/>
@@ -375,7 +375,7 @@
 								<!-- Shadowed Paths -->
 								<Rectangle Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Black" />
 								<StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0">
-									<Image Source="/JiME;component/Assets/Collection-White-Web.png" Height="15" Stretch="Uniform" Margin="2,0" />
+									<TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 									<CheckBox Click="collection_Click" x:Name="shadowedPathsCB" Content="Shadowed Paths:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 								</StackPanel>
 								<CheckBox Grid.Row="3" Grid.Column="1" x:Name="balrogCB" Content="Balrog x1 (X)" Foreground="White" Padding="0,0,5,0"/>
@@ -390,7 +390,7 @@
 								<!-- Dwellers in Darkness -->
 								<Rectangle Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Purple" />
 								<StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="0">
-									<Image Source="/JiME;component/Assets/Collection-White-Crown.png" Height="15" Stretch="Uniform" Margin="2,0" />
+									<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 									<CheckBox Click="collection_Click" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 								</StackPanel>
 								<CheckBox Grid.Row="5" Grid.Column="1" x:Name="ollieCB" Content="Ollie x1 (X)" Foreground="White" Padding="0,0,5,0"/>
@@ -400,7 +400,7 @@
 								<!-- Spreading War -->
 								<Rectangle Grid.Row="6" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkRed" />
 								<StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="0">
-									<Image Source="/JiME;component/Assets/Collection-White-War.png" Height="15" Stretch="Uniform" Margin="2,0" />
+									<TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 									<CheckBox Click="collection_Click" x:Name="spreadingWarCB" Content="Spreading War:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 								</StackPanel>
 								<CheckBox Grid.Row="6" Grid.Column="1" x:Name="fellBeastCB" Content="Fell Beast x3 (24)" Foreground="White" Padding="0,0,5,0"/>
