--- a/Views/MonsterEditorWindow.xaml
+++ b/Views/MonsterEditorWindow.xaml
@@ -82,7 +82,7 @@
 						<!--Core Set-->
 						<Rectangle Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkGreen" />
 						<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-							<Image Source="/JiME;component/Assets/Collection-White-Ring.png" Height="15" Stretch="Uniform" Margin="2,0,2,0"/>
+							<TextBlock Text="r" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Core Set:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
 						<RadioButton Click="monsterType_Click" Grid.Row="0" Grid.Column="1" x:Name="goblinScoutRB" Content="Goblin Scout x6" Foreground="White"/>
@@ -96,7 +96,7 @@
 						<!-- Villains of Eriador -->
 						<Rectangle Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="SaddleBrown" />
 						<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
-							<Image Source="/JiME;component/Assets/Collection-White-Wolf.png" Height="15" Stretch="Uniform" Margin="2,0,2,0"/>
+							<TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Villains of Eriador:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
 						<RadioButton Click="monsterType_Click" Grid.Row="2" Grid.Column="1" x:Name="atarinRB" Content="Atarin x1" Foreground="White" />
@@ -106,7 +106,7 @@
 						<!-- Shadowed Paths -->
 						<Rectangle Grid.Row="3" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Black" />
 						<StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0">
-							<Image Source="/JiME;component/Assets/Collection-White-Web.png" Height="15" Stretch="Uniform" Margin="2,0,2,0"/>
+							<TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Shadowed Paths:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
 						<RadioButton Click="monsterType_Click" Grid.Row="3" Grid.Column="1" x:Name="balrogRB" Content="Balrog x1" Foreground="White"/>
@@ -121,7 +121,7 @@
 						<!-- Dwellers in Darkness -->
 						<Rectangle Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Purple" />
 						<StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="0">
-							<Image Source="/JiME;component/Assets/Collection-White-Crown.png" Height="15" Stretch="Uniform" Margin="2,0,2,0"/>
+							<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Dwellers in Darkness:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
 						<RadioButton Click="monsterType_Click" Grid.Row="5" Grid.Column="1" x:Name="ollieRB" Content="Ollie x1" Foreground="White"/>
@@ -131,7 +131,7 @@
 						<!-- Spreading War -->
 						<Rectangle Grid.Row="6" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="DarkRed" />
 						<StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="0">
-							<Image Source="/JiME;component/Assets/Collection-White-War.png" Height="15" Stretch="Uniform" Margin="2,0,2,0"/>
+							<TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 							<TextBlock Text="Spreading War:" FontWeight="Bold" Foreground="White" Margin="0,4,4,0"/>
 						</StackPanel>
 						<RadioButton Click="monsterType_Click" Grid.Row="6" Grid.Column="1" x:Name="fellBeastRB" Content="Fell Beast x3" Foreground="White"/>
