--- a/Views/ScenarioWindow.xaml
+++ b/Views/ScenarioWindow.xaml
@@ -73,27 +73,27 @@
 					<!--Core Set-->
 					<Rectangle Grid.Row="0" Grid.Column="0" Fill="DarkGreen" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-						<Image Source="/JiME;component/Assets/Collection-White-Ring.png" Height="15" Stretch="Uniform" Margin="2,0" />
+						<TextBlock Text="r" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 						<CheckBox Click="collection_Click" x:Name="coreSetCB" Content="Core Set" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 					</StackPanel>
 					<Rectangle Grid.Row="0" Grid.Column="1" Fill="SaddleBrown" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
-						<Image Source="/JiME;component/Assets/Collection-White-Wolf.png" Height="15" Stretch="Uniform" Margin="2,0" />
+						<TextBlock Text="v" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 						<CheckBox Click="collection_Click" x:Name="villainsOfEriadorCB" Content="Villains of Eriador" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 					</StackPanel>
 					<Rectangle Grid.Row="0" Grid.Column="2" Fill="Black" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2">
-						<Image Source="/JiME;component/Assets/Collection-White-Web.png" Height="15" Stretch="Uniform" Margin="2,0" />
+						<TextBlock Text="p" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 						<CheckBox Click="collection_Click" x:Name="shadowedPathsCB" Content="Shadowed Paths" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 					</StackPanel>
 					<Rectangle Grid.Row="0" Grid.Column="3" Fill="Purple" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="3">
-						<Image Source="/JiME;component/Assets/Collection-White-Crown.png" Height="15" Stretch="Uniform" Margin="2,0" />
+						<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 						<CheckBox Click="collection_Click" x:Name="dwellersInDarknessCB" Content="Dwellers in Darkness" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 					</StackPanel>
 					<Rectangle Grid.Row="0" Grid.Column="4" Fill="DarkRed" />
 					<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="4">
-						<Image Source="/JiME;component/Assets/Collection-White-War.png" Height="15" Stretch="Uniform" Margin="2,0" />
+						<TextBlock Text="w" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
 						<CheckBox Click="collection_Click" x:Name="spreadingWarCB" Content="Spreading War" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 					</StackPanel>
 				</Grid>
